docs/4.20/rest_api/config_apis/clusterversion-config-openshift-io-v1.md
Description
ClusterVersion is the configuration for the ClusterVersionOperator. This is where parameters related to automatic updates can be set.

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

Required
- `spec`

# Specification

| Property     | Type                                                                                 | Description                                                                                                                                                                                                                                                                                          |
|--------------|--------------------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `apiVersion` | `string`                                                                             | APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: <https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources>  |
| `kind`       | `string`                                                                             | Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: <https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds> |
| `metadata`   | [`ObjectMeta`](../objects/index.xml#io-k8s-apimachinery-pkg-apis-meta-v1-ObjectMeta) | Standard object’s metadata. More info: <https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata>                                                                                                                                                                |
| `spec`       | `object`                                                                             | spec is the desired state of the cluster version - the operator will work to ensure that the desired version is applied to the cluster.                                                                                                                                                              |
| `status`     | `object`                                                                             | status contains information about the available updates and any in-progress updates.                                                                                                                                                                                                                 |

## .spec

Description
spec is the desired state of the cluster version - the operator will work to ensure that the desired version is applied to the cluster.

Type
`object`

Required
- `clusterID`

<table>
<colgroup>
<col style="width: 33%" />
<col style="width: 33%" />
<col style="width: 33%" />
</colgroup>
<thead>
<tr class="header">
<th style="text-align: left;">Property</th>
<th style="text-align: left;">Type</th>
<th style="text-align: left;">Description</th>
</tr>
</thead>
<tbody>
<tr class="odd">
<td style="text-align: left;"><p><code>capabilities</code></p></td>
<td style="text-align: left;"><p><code>object</code></p></td>
<td style="text-align: left;"><p>capabilities configures the installation of optional, core cluster components. A null value here is identical to an empty object; see the child properties for default semantics.</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>channel</code></p></td>
<td style="text-align: left;"><p><code>string</code></p></td>
<td style="text-align: left;"><p>channel is an identifier for explicitly requesting that a non-default set of updates be applied to this cluster. The default channel will be contain stable updates that are appropriate for production clusters.</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>clusterID</code></p></td>
<td style="text-align: left;"><p><code>string</code></p></td>
<td style="text-align: left;"><p>clusterID uniquely identifies this cluster. This is expected to be an RFC4122 UUID value (xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx in hexadecimal values). This is a required field.</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>desiredUpdate</code></p></td>
<td style="text-align: left;"><p><code>object</code></p></td>
<td style="text-align: left;"><p>desiredUpdate is an optional field that indicates the desired value of the cluster version. Setting this value will trigger an upgrade (if the current version does not match the desired version). The set of recommended update values is listed as part of available updates in status, and setting values outside that range may cause the upgrade to fail.</p>
<p>Some of the fields are inter-related with restrictions and meanings described here. 1. image is specified, version is specified, architecture is specified. API validation error. 2. image is specified, version is specified, architecture is not specified. You should not do this. version is silently ignored and image is used. 3. image is specified, version is not specified, architecture is specified. API validation error. 4. image is specified, version is not specified, architecture is not specified. image is used. 5. image is not specified, version is specified, architecture is specified. version and desired architecture are used to select an image. 6. image is not specified, version is specified, architecture is not specified. version and current architecture are used to select an image. 7. image is not specified, version is not specified, architecture is specified. API validation error. 8. image is not specified, version is not specified, architecture is not specified. API validation error.</p>
<p>If an upgrade fails the operator will halt and report status about the failing component. Setting the desired update value back to the previous version will cause a rollback to be attempted. Not all rollbacks will succeed.</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>overrides</code></p></td>
<td style="text-align: left;"><p><code>array</code></p></td>
<td style="text-align: left;"><p>overrides is list of overides for components that are managed by cluster version operator. Marking a component unmanaged will prevent the operator from creating or updating the object.</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>overrides[]</code></p></td>
<td style="text-align: left;"><p><code>object</code></p></td>
<td style="text-align: left;"><p>ComponentOverride allows overriding cluster version operator’s behavior for a component.</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>upstream</code></p></td>
<td style="text-align: left;"><p><code>string</code></p></td>
<td style="text-align: left;"><p>upstream may be used to specify the preferred update server. By default it will use the appropriate update server for the cluster and region.</p></td>
</tr>
</tbody>
</table>

## .spec.capabilities

Description
capabilities configures the installation of optional, core cluster components. A null value here is identical to an empty object; see the child properties for default semantics.

Type
`object`

| Property                        | Type             | Description                                                                                                                                                                                                                                                   |
|---------------------------------|------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `additionalEnabledCapabilities` | `array (string)` | additionalEnabledCapabilities extends the set of managed capabilities beyond the baseline defined in baselineCapabilitySet. The default is an empty set.                                                                                                      |
| `baselineCapabilitySet`         | `string`         | baselineCapabilitySet selects an initial set of optional capabilities to enable, which can be extended via additionalEnabledCapabilities. If unset, the cluster will choose a default, and the default may change over time. The current default is vCurrent. |

## .spec.desiredUpdate

Description
desiredUpdate is an optional field that indicates the desired value of the cluster version. Setting this value will trigger an upgrade (if the current version does not match the desired version). The set of recommended update values is listed as part of available updates in status, and setting values outside that range may cause the upgrade to fail.

Some of the fields are inter-related with restrictions and meanings described here. 1. image is specified, version is specified, architecture is specified. API validation error. 2. image is specified, version is specified, architecture is not specified. You should not do this. version is silently ignored and image is used. 3. image is specified, version is not specified, architecture is specified. API validation error. 4. image is specified, version is not specified, architecture is not specified. image is used. 5. image is not specified, version is specified, architecture is specified. version and desired architecture are used to select an image. 6. image is not specified, version is specified, architecture is not specified. version and current architecture are used to select an image. 7. image is not specified, version is not specified, architecture is specified. API validation error. 8. image is not specified, version is not specified, architecture is not specified. API validation error.

If an upgrade fails the operator will halt and report status about the failing component. Setting the desired update value back to the previous version will cause a rollback to be attempted. Not all rollbacks will succeed.

Type
`object`

| Property       | Type      | Description                                                                                                                                                                                                                                                                                                                                                                                                      |
|----------------|-----------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `architecture` | `string`  | architecture is an optional field that indicates the desired value of the cluster architecture. In this context cluster architecture means either a single architecture or a multi architecture. architecture can only be set to Multi thereby only allowing updates from single to multi architecture. If architecture is set, image cannot be set and version must be set. Valid values are 'Multi' and empty. |
| `force`        | `boolean` | force allows an administrator to update to an image that has failed verification or upgradeable checks. This option should only be used when the authenticity of the provided image has been verified out of band because the provided image will run with full administrative access to the cluster. Do not use this flag with images that comes from unknown or potentially malicious sources.                 |
| `image`        | `string`  | image is a container image location that contains the update. image should be used when the desired version does not exist in availableUpdates or history. When image is set, version is ignored. When image is set, version should be empty. When image is set, architecture cannot be specified.                                                                                                               |
| `version`      | `string`  | version is a semantic version identifying the update version. version is ignored if image is specified and required if architecture is specified.                                                                                                                                                                                                                                                                |

## .spec.overrides

Description
overrides is list of overides for components that are managed by cluster version operator. Marking a component unmanaged will prevent the operator from creating or updating the object.

Type
`array`

## .spec.overrides\[\]

Description
ComponentOverride allows overriding cluster version operator’s behavior for a component.

Type
`object`

Required
- `group`

- `kind`

- `name`

- `namespace`

- `unmanaged`

| Property    | Type      | Description                                                                                                       |
|-------------|-----------|-------------------------------------------------------------------------------------------------------------------|
| `group`     | `string`  | group identifies the API group that the kind is in.                                                               |
| `kind`      | `string`  | kind indentifies which object to override.                                                                        |
| `name`      | `string`  | name is the component’s name.                                                                                     |
| `namespace` | `string`  | namespace is the component’s namespace. If the resource is cluster scoped, the namespace should be empty.         |
| `unmanaged` | `boolean` | unmanaged controls if cluster version operator should stop managing the resources in this cluster. Default: false |

## .status

Description
status contains information about the available updates and any in-progress updates.

Type
`object`

Required
- `desired`

- `observedGeneration`

- `versionHash`

| Property               | Type      | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
|------------------------|-----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `availableUpdates`     | \`\`      | availableUpdates contains updates recommended for this cluster. Updates which appear in conditionalUpdates but not in availableUpdates may expose this cluster to known issues. This list may be empty if no updates are recommended, if the update service is unavailable, or if an invalid channel has been specified.                                                                                                                                          |
| `capabilities`         | `object`  | capabilities describes the state of optional, core cluster components.                                                                                                                                                                                                                                                                                                                                                                                            |
| `conditionalUpdates`   | `array`   | conditionalUpdates contains the list of updates that may be recommended for this cluster if it meets specific required conditions. Consumers interested in the set of updates that are actually recommended for this cluster should use availableUpdates. This list may be empty if no updates are recommended, if the update service is unavailable, or if an empty or invalid channel has been specified.                                                       |
| `conditionalUpdates[]` | `object`  | ConditionalUpdate represents an update which is recommended to some clusters on the version the current cluster is reconciling, but which may not be recommended for the current cluster.                                                                                                                                                                                                                                                                         |
| `conditions`           | `array`   | conditions provides information about the cluster version. The condition "Available" is set to true if the desiredUpdate has been reached. The condition "Progressing" is set to true if an update is being applied. The condition "Degraded" is set to true if an update is currently blocked by a temporary or permanent error. Conditions are only valid for the current desiredUpdate when metadata.generation is equal to status.generation.                 |
| `conditions[]`         | `object`  | ClusterOperatorStatusCondition represents the state of the operator’s managed and monitored components.                                                                                                                                                                                                                                                                                                                                                           |
| `desired`              | `object`  | desired is the version that the cluster is reconciling towards. If the cluster is not yet fully initialized desired will be set with the information available, which may be an image or a tag.                                                                                                                                                                                                                                                                   |
| `history`              | `array`   | history contains a list of the most recent versions applied to the cluster. This value may be empty during cluster startup, and then will be updated when a new update is being applied. The newest update is first in the list and it is ordered by recency. Updates in the history have state Completed if the rollout completed - if an update was failing or halfway applied the state will be Partial. Only a limited amount of update history is preserved. |
| `history[]`            | `object`  | UpdateHistory is a single attempted update to the cluster.                                                                                                                                                                                                                                                                                                                                                                                                        |
| `observedGeneration`   | `integer` | observedGeneration reports which version of the spec is being synced. If this value is not equal to metadata.generation, then the desired and conditions fields may represent a previous version.                                                                                                                                                                                                                                                                 |
| `versionHash`          | `string`  | versionHash is a fingerprint of the content that the cluster will be updated with. It is used by the operator to avoid unnecessary work and is for internal use only.                                                                                                                                                                                                                                                                                             |

## .status.capabilities

Description
capabilities describes the state of optional, core cluster components.

Type
`object`

| Property              | Type             | Description                                                                |
|-----------------------|------------------|----------------------------------------------------------------------------|
| `enabledCapabilities` | `array (string)` | enabledCapabilities lists all the capabilities that are currently managed. |
| `knownCapabilities`   | `array (string)` | knownCapabilities lists all the capabilities known to the current cluster. |

## .status.conditionalUpdates

Description
conditionalUpdates contains the list of updates that may be recommended for this cluster if it meets specific required conditions. Consumers interested in the set of updates that are actually recommended for this cluster should use availableUpdates. This list may be empty if no updates are recommended, if the update service is unavailable, or if an empty or invalid channel has been specified.

Type
`array`

## .status.conditionalUpdates\[\]

Description
ConditionalUpdate represents an update which is recommended to some clusters on the version the current cluster is reconciling, but which may not be recommended for the current cluster.

Type
`object`

Required
- `release`

- `risks`

| Property       | Type     | Description                                                                                                                                                                                                                                     |
|----------------|----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `conditions`   | `array`  | conditions represents the observations of the conditional update’s current status. Known types are: \* Recommended, for whether the update is recommended for the current cluster.                                                              |
| `conditions[]` | `object` | Condition contains details for one aspect of the current state of this API Resource.                                                                                                                                                            |
| `release`      | `object` | release is the target of the update.                                                                                                                                                                                                            |
| `risks`        | `array`  | risks represents the range of issues associated with updating to the target release. The cluster-version operator will evaluate all entries, and only recommend the update if there is at least one entry and all entries recommend the update. |
| `risks[]`      | `object` | ConditionalUpdateRisk represents a reason and cluster-state for not recommending a conditional update.                                                                                                                                          |

## .status.conditionalUpdates\[\].conditions

Description
conditions represents the observations of the conditional update’s current status. Known types are: \* Recommended, for whether the update is recommended for the current cluster.

Type
`array`

## .status.conditionalUpdates\[\].conditions\[\]

Description
Condition contains details for one aspect of the current state of this API Resource.

Type
`object`

Required
- `lastTransitionTime`

- `message`

- `reason`

- `status`

- `type`

| Property             | Type      | Description                                                                                                                                                                                                                                                                                                                     |
|----------------------|-----------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `lastTransitionTime` | `string`  | lastTransitionTime is the last time the condition transitioned from one status to another. This should be when the underlying condition changed. If that is not known, then using the time when the API field changed is acceptable.                                                                                            |
| `message`            | `string`  | message is a human readable message indicating details about the transition. This may be an empty string.                                                                                                                                                                                                                       |
| `observedGeneration` | `integer` | observedGeneration represents the .metadata.generation that the condition was set based upon. For instance, if .metadata.generation is currently 12, but the .status.conditions\[x\].observedGeneration is 9, the condition is out of date with respect to the current state of the instance.                                   |
| `reason`             | `string`  | reason contains a programmatic identifier indicating the reason for the condition’s last transition. Producers of specific condition types may define expected values and meanings for this field, and whether the values are considered a guaranteed API. The value should be a CamelCase string. This field may not be empty. |
| `status`             | `string`  | status of the condition, one of True, False, Unknown.                                                                                                                                                                                                                                                                           |
| `type`               | `string`  | type of condition in CamelCase or in foo.example.com/CamelCase.                                                                                                                                                                                                                                                                 |

## .status.conditionalUpdates\[\].release

Description
release is the target of the update.

Type
`object`

Required
- `image`

- `version`

| Property   | Type             | Description                                                                                                                                                                                                                                                          |
|------------|------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `channels` | `array (string)` | channels is the set of Cincinnati channels to which the release currently belongs.                                                                                                                                                                                   |
| `image`    | `string`         | image is a container image location that contains the update. When this field is part of spec, image is optional if version is specified and the availableUpdates field contains a matching version.                                                                 |
| `url`      | `string`         | url contains information about this release. This URL is set by the 'url' metadata property on a release or the metadata returned by the update API and should be displayed as a link in user interfaces. The URL field may not be set for test or nightly releases. |
| `version`  | `string`         | version is a semantic version identifying the update version. When this field is part of spec, version is optional if image is specified.                                                                                                                            |

## .status.conditionalUpdates\[\].risks

Description
risks represents the range of issues associated with updating to the target release. The cluster-version operator will evaluate all entries, and only recommend the update if there is at least one entry and all entries recommend the update.

Type
`array`

## .status.conditionalUpdates\[\].risks\[\]

Description
ConditionalUpdateRisk represents a reason and cluster-state for not recommending a conditional update.

Type
`object`

Required
- `matchingRules`

- `message`

- `name`

- `url`

| Property          | Type     | Description                                                                                                                                                                                                                                                                                                                                             |
|-------------------|----------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `matchingRules`   | `array`  | matchingRules is a slice of conditions for deciding which clusters match the risk and which do not. The slice is ordered by decreasing precedence. The cluster-version operator will walk the slice in order, and stop after the first it can successfully evaluate. If no condition can be successfully evaluated, the update will not be recommended. |
| `matchingRules[]` | `object` | ClusterCondition is a union of typed cluster conditions. The 'type' property determines which of the type-specific properties are relevant. When evaluated on a cluster, the condition may match, not match, or fail to evaluate.                                                                                                                       |
| `message`         | `string` | message provides additional information about the risk of updating, in the event that matchingRules match the cluster state. This is only to be consumed by humans. It may contain Line Feed characters (U+000A), which should be rendered as new lines.                                                                                                |
| `name`            | `string` | name is the CamelCase reason for not recommending a conditional update, in the event that matchingRules match the cluster state.                                                                                                                                                                                                                        |
| `url`             | `string` | url contains information about this risk.                                                                                                                                                                                                                                                                                                               |

## .status.conditionalUpdates\[\].risks\[\].matchingRules

Description
matchingRules is a slice of conditions for deciding which clusters match the risk and which do not. The slice is ordered by decreasing precedence. The cluster-version operator will walk the slice in order, and stop after the first it can successfully evaluate. If no condition can be successfully evaluated, the update will not be recommended.

Type
`array`

## .status.conditionalUpdates\[\].risks\[\].matchingRules\[\]

Description
ClusterCondition is a union of typed cluster conditions. The 'type' property determines which of the type-specific properties are relevant. When evaluated on a cluster, the condition may match, not match, or fail to evaluate.

Type
`object`

Required
- `type`

| Property | Type     | Description                                                                                                      |
|----------|----------|------------------------------------------------------------------------------------------------------------------|
| `promql` | `object` | promql represents a cluster condition based on PromQL.                                                           |
| `type`   | `string` | type represents the cluster-condition type. This defines the members and semantics of any additional properties. |

## .status.conditionalUpdates\[\].risks\[\].matchingRules\[\].promql

Description
promql represents a cluster condition based on PromQL.

Type
`object`

Required
- `promql`

| Property | Type     | Description                                                                                                                                                                                                                                  |
|----------|----------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `promql` | `string` | promql is a PromQL query classifying clusters. This query query should return a 1 in the match case and a 0 in the does-not-match case. Queries which return no time series, or which return values besides 0 or 1, are evaluation failures. |

## .status.conditions

Description
conditions provides information about the cluster version. The condition "Available" is set to true if the desiredUpdate has been reached. The condition "Progressing" is set to true if an update is being applied. The condition "Degraded" is set to true if an update is currently blocked by a temporary or permanent error. Conditions are only valid for the current desiredUpdate when metadata.generation is equal to status.generation.

Type
`array`

## .status.conditions\[\]

Description
ClusterOperatorStatusCondition represents the state of the operator’s managed and monitored components.

Type
`object`

Required
- `lastTransitionTime`

- `status`

- `type`

| Property             | Type     | Description                                                                                                                                                                                      |
|----------------------|----------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `lastTransitionTime` | `string` | lastTransitionTime is the time of the last update to the current status property.                                                                                                                |
| `message`            | `string` | message provides additional information about the current condition. This is only to be consumed by humans. It may contain Line Feed characters (U+000A), which should be rendered as new lines. |
| `reason`             | `string` | reason is the CamelCase reason for the condition’s current status.                                                                                                                               |
| `status`             | `string` | status of the condition, one of True, False, Unknown.                                                                                                                                            |
| `type`               | `string` | type specifies the aspect reported by this condition.                                                                                                                                            |

## .status.desired

Description
desired is the version that the cluster is reconciling towards. If the cluster is not yet fully initialized desired will be set with the information available, which may be an image or a tag.

Type
`object`

Required
- `image`

- `version`

| Property   | Type             | Description                                                                                                                                                                                                                                                          |
|------------|------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `channels` | `array (string)` | channels is the set of Cincinnati channels to which the release currently belongs.                                                                                                                                                                                   |
| `image`    | `string`         | image is a container image location that contains the update. When this field is part of spec, image is optional if version is specified and the availableUpdates field contains a matching version.                                                                 |
| `url`      | `string`         | url contains information about this release. This URL is set by the 'url' metadata property on a release or the metadata returned by the update API and should be displayed as a link in user interfaces. The URL field may not be set for test or nightly releases. |
| `version`  | `string`         | version is a semantic version identifying the update version. When this field is part of spec, version is optional if image is specified.                                                                                                                            |

## .status.history

Description
history contains a list of the most recent versions applied to the cluster. This value may be empty during cluster startup, and then will be updated when a new update is being applied. The newest update is first in the list and it is ordered by recency. Updates in the history have state Completed if the rollout completed - if an update was failing or halfway applied the state will be Partial. Only a limited amount of update history is preserved.

Type
`array`

## .status.history\[\]

Description
UpdateHistory is a single attempted update to the cluster.

Type
`object`

Required
- `image`

- `startedTime`

- `state`

- `verified`

| Property         | Type      | Description                                                                                                                                                                                                                                                                                             |
|------------------|-----------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `acceptedRisks`  | `string`  | acceptedRisks records risks which were accepted to initiate the update. For example, it may menition an Upgradeable=False or missing signature that was overriden via desiredUpdate.force, or an update that was initiated despite not being in the availableUpdates set of recommended update targets. |
| `completionTime` | \`\`      | completionTime, if set, is when the update was fully applied. The update that is currently being applied will have a null completion time. Completion time will always be set for entries that are not the current update (usually to the started time of the next update).                             |
| `image`          | `string`  | image is a container image location that contains the update. This value is always populated.                                                                                                                                                                                                           |
| `startedTime`    | `string`  | startedTime is the time at which the update was started.                                                                                                                                                                                                                                                |
| `state`          | `string`  | state reflects whether the update was fully applied. The Partial state indicates the update is not fully applied, while the Completed state indicates the update was successfully rolled out at least once (all parts of the update successfully applied).                                              |
| `verified`       | `boolean` | verified indicates whether the provided update was properly verified before it was installed. If this is false the cluster may not be trusted. Verified does not cover upgradeable checks that depend on the cluster state at the time when the update target was accepted.                             |
| `version`        | `string`  | version is a semantic version identifying the update version. If the requested image does not define a version, or if a failure occurs retrieving the image, this value may be empty.                                                                                                                   |

# API endpoints

The following API endpoints are available:

- `/apis/config.openshift.io/v1/clusterversions`

  - `DELETE`: delete collection of ClusterVersion

  - `GET`: list objects of kind ClusterVersion

  - `POST`: create a ClusterVersion

- `/apis/config.openshift.io/v1/clusterversions/{name}`

  - `DELETE`: delete a ClusterVersion

  - `GET`: read the specified ClusterVersion

  - `PATCH`: partially update the specified ClusterVersion

  - `PUT`: replace the specified ClusterVersion

- `/apis/config.openshift.io/v1/clusterversions/{name}/status`

  - `GET`: read status of the specified ClusterVersion

  - `PATCH`: partially update status of the specified ClusterVersion

  - `PUT`: replace status of the specified ClusterVersion

## /apis/config.openshift.io/v1/clusterversions

HTTP method
`DELETE`

Description
delete collection of ClusterVersion

| HTTP code          | Reponse body                                                                        |
|--------------------|-------------------------------------------------------------------------------------|
| 200 - OK           | [`Status`](../objects/index.xml#io-k8s-apimachinery-pkg-apis-meta-v1-Status) schema |
| 401 - Unauthorized | Empty                                                                               |

HTTP responses

HTTP method
`GET`

Description
list objects of kind ClusterVersion

| HTTP code          | Reponse body                                                                                  |
|--------------------|-----------------------------------------------------------------------------------------------|
| 200 - OK           | [`ClusterVersionList`](../objects/index.xml#io-openshift-config-v1-ClusterVersionList) schema |
| 401 - Unauthorized | Empty                                                                                         |

HTTP responses

HTTP method
`POST`

Description
create a ClusterVersion

| Parameter         | Type     | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|-------------------|----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`          | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `fieldValidation` | `string` | fieldValidation instructs the server on how to handle objects in the request (POST/PUT/PATCH) containing unknown or duplicate fields. Valid values are: - Ignore: This will ignore any unknown fields that are silently dropped from the object, and will ignore all but the last duplicate field that the decoder encounters. This is the default behavior prior to v1.23. - Warn: This will send a warning via the standard warning response header for each unknown field that is dropped from the object, and for each duplicate field that is encountered. The request will still succeed if there are no other errors, and will only persist the last of any duplicate fields. This is the default in v1.23+ - Strict: This will fail the request with a BadRequest error if any unknown fields would be dropped from the object, or if any duplicate fields are present. The error returned from the server will contain all unknown and duplicate fields encountered. |

Query parameters

| Parameter | Type                                                                                                                      | Description |
|-----------|---------------------------------------------------------------------------------------------------------------------------|-------------|
| `body`    | [`ClusterVersion`](../config_apis/clusterversion-config-openshift-io-v1.xml#clusterversion-config-openshift-io-v1) schema |             |

Body parameters

| HTTP code          | Reponse body                                                                                                              |
|--------------------|---------------------------------------------------------------------------------------------------------------------------|
| 200 - OK           | [`ClusterVersion`](../config_apis/clusterversion-config-openshift-io-v1.xml#clusterversion-config-openshift-io-v1) schema |
| 201 - Created      | [`ClusterVersion`](../config_apis/clusterversion-config-openshift-io-v1.xml#clusterversion-config-openshift-io-v1) schema |
| 202 - Accepted     | [`ClusterVersion`](../config_apis/clusterversion-config-openshift-io-v1.xml#clusterversion-config-openshift-io-v1) schema |
| 401 - Unauthorized | Empty                                                                                                                     |

HTTP responses

## /apis/config.openshift.io/v1/clusterversions/{name}

| Parameter | Type     | Description                |
|-----------|----------|----------------------------|
| `name`    | `string` | name of the ClusterVersion |

Global path parameters

HTTP method
`DELETE`

Description
delete a ClusterVersion

| Parameter | Type     | Description                                                                                                                                                                                                                                              |
|-----------|----------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`  | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed |

Query parameters

| HTTP code          | Reponse body                                                                        |
|--------------------|-------------------------------------------------------------------------------------|
| 200 - OK           | [`Status`](../objects/index.xml#io-k8s-apimachinery-pkg-apis-meta-v1-Status) schema |
| 202 - Accepted     | [`Status`](../objects/index.xml#io-k8s-apimachinery-pkg-apis-meta-v1-Status) schema |
| 401 - Unauthorized | Empty                                                                               |

HTTP responses

HTTP method
`GET`

Description
read the specified ClusterVersion

| HTTP code          | Reponse body                                                                                                              |
|--------------------|---------------------------------------------------------------------------------------------------------------------------|
| 200 - OK           | [`ClusterVersion`](../config_apis/clusterversion-config-openshift-io-v1.xml#clusterversion-config-openshift-io-v1) schema |
| 401 - Unauthorized | Empty                                                                                                                     |

HTTP responses

HTTP method
`PATCH`

Description
partially update the specified ClusterVersion

| Parameter         | Type     | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|-------------------|----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`          | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `fieldValidation` | `string` | fieldValidation instructs the server on how to handle objects in the request (POST/PUT/PATCH) containing unknown or duplicate fields. Valid values are: - Ignore: This will ignore any unknown fields that are silently dropped from the object, and will ignore all but the last duplicate field that the decoder encounters. This is the default behavior prior to v1.23. - Warn: This will send a warning via the standard warning response header for each unknown field that is dropped from the object, and for each duplicate field that is encountered. The request will still succeed if there are no other errors, and will only persist the last of any duplicate fields. This is the default in v1.23+ - Strict: This will fail the request with a BadRequest error if any unknown fields would be dropped from the object, or if any duplicate fields are present. The error returned from the server will contain all unknown and duplicate fields encountered. |

Query parameters

| HTTP code          | Reponse body                                                                                                              |
|--------------------|---------------------------------------------------------------------------------------------------------------------------|
| 200 - OK           | [`ClusterVersion`](../config_apis/clusterversion-config-openshift-io-v1.xml#clusterversion-config-openshift-io-v1) schema |
| 401 - Unauthorized | Empty                                                                                                                     |

HTTP responses

HTTP method
`PUT`

Description
replace the specified ClusterVersion

| Parameter         | Type     | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|-------------------|----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`          | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `fieldValidation` | `string` | fieldValidation instructs the server on how to handle objects in the request (POST/PUT/PATCH) containing unknown or duplicate fields. Valid values are: - Ignore: This will ignore any unknown fields that are silently dropped from the object, and will ignore all but the last duplicate field that the decoder encounters. This is the default behavior prior to v1.23. - Warn: This will send a warning via the standard warning response header for each unknown field that is dropped from the object, and for each duplicate field that is encountered. The request will still succeed if there are no other errors, and will only persist the last of any duplicate fields. This is the default in v1.23+ - Strict: This will fail the request with a BadRequest error if any unknown fields would be dropped from the object, or if any duplicate fields are present. The error returned from the server will contain all unknown and duplicate fields encountered. |

Query parameters

| Parameter | Type                                                                                                                      | Description |
|-----------|---------------------------------------------------------------------------------------------------------------------------|-------------|
| `body`    | [`ClusterVersion`](../config_apis/clusterversion-config-openshift-io-v1.xml#clusterversion-config-openshift-io-v1) schema |             |

Body parameters

| HTTP code          | Reponse body                                                                                                              |
|--------------------|---------------------------------------------------------------------------------------------------------------------------|
| 200 - OK           | [`ClusterVersion`](../config_apis/clusterversion-config-openshift-io-v1.xml#clusterversion-config-openshift-io-v1) schema |
| 201 - Created      | [`ClusterVersion`](../config_apis/clusterversion-config-openshift-io-v1.xml#clusterversion-config-openshift-io-v1) schema |
| 401 - Unauthorized | Empty                                                                                                                     |

HTTP responses

## /apis/config.openshift.io/v1/clusterversions/{name}/status

| Parameter | Type     | Description                |
|-----------|----------|----------------------------|
| `name`    | `string` | name of the ClusterVersion |

Global path parameters

HTTP method
`GET`

Description
read status of the specified ClusterVersion

| HTTP code          | Reponse body                                                                                                              |
|--------------------|---------------------------------------------------------------------------------------------------------------------------|
| 200 - OK           | [`ClusterVersion`](../config_apis/clusterversion-config-openshift-io-v1.xml#clusterversion-config-openshift-io-v1) schema |
| 401 - Unauthorized | Empty                                                                                                                     |

HTTP responses

HTTP method
`PATCH`

Description
partially update status of the specified ClusterVersion

| Parameter         | Type     | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|-------------------|----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`          | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `fieldValidation` | `string` | fieldValidation instructs the server on how to handle objects in the request (POST/PUT/PATCH) containing unknown or duplicate fields. Valid values are: - Ignore: This will ignore any unknown fields that are silently dropped from the object, and will ignore all but the last duplicate field that the decoder encounters. This is the default behavior prior to v1.23. - Warn: This will send a warning via the standard warning response header for each unknown field that is dropped from the object, and for each duplicate field that is encountered. The request will still succeed if there are no other errors, and will only persist the last of any duplicate fields. This is the default in v1.23+ - Strict: This will fail the request with a BadRequest error if any unknown fields would be dropped from the object, or if any duplicate fields are present. The error returned from the server will contain all unknown and duplicate fields encountered. |

Query parameters

| HTTP code          | Reponse body                                                                                                              |
|--------------------|---------------------------------------------------------------------------------------------------------------------------|
| 200 - OK           | [`ClusterVersion`](../config_apis/clusterversion-config-openshift-io-v1.xml#clusterversion-config-openshift-io-v1) schema |
| 401 - Unauthorized | Empty                                                                                                                     |

HTTP responses

HTTP method
`PUT`

Description
replace status of the specified ClusterVersion

| Parameter         | Type     | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|-------------------|----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`          | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `fieldValidation` | `string` | fieldValidation instructs the server on how to handle objects in the request (POST/PUT/PATCH) containing unknown or duplicate fields. Valid values are: - Ignore: This will ignore any unknown fields that are silently dropped from the object, and will ignore all but the last duplicate field that the decoder encounters. This is the default behavior prior to v1.23. - Warn: This will send a warning via the standard warning response header for each unknown field that is dropped from the object, and for each duplicate field that is encountered. The request will still succeed if there are no other errors, and will only persist the last of any duplicate fields. This is the default in v1.23+ - Strict: This will fail the request with a BadRequest error if any unknown fields would be dropped from the object, or if any duplicate fields are present. The error returned from the server will contain all unknown and duplicate fields encountered. |

Query parameters

| Parameter | Type                                                                                                                      | Description |
|-----------|---------------------------------------------------------------------------------------------------------------------------|-------------|
| `body`    | [`ClusterVersion`](../config_apis/clusterversion-config-openshift-io-v1.xml#clusterversion-config-openshift-io-v1) schema |             |

Body parameters

| HTTP code          | Reponse body                                                                                                              |
|--------------------|---------------------------------------------------------------------------------------------------------------------------|
| 200 - OK           | [`ClusterVersion`](../config_apis/clusterversion-config-openshift-io-v1.xml#clusterversion-config-openshift-io-v1) schema |
| 201 - Created      | [`ClusterVersion`](../config_apis/clusterversion-config-openshift-io-v1.xml#clusterversion-config-openshift-io-v1) schema |
| 401 - Unauthorized | Empty                                                                                                                     |

HTTP responses
